# physicsnemo

./: .importlinter  .pre-commit-config.yaml  Dockerfile  README.md  prevent_untracked_imports.py  pyproject.toml
.cursor/rules/: model-rule-000-organization-of-new-classes.mdc  model-rule-001-class-inheritance-for-new-models.mdc  model-rule-002-models-lifecycle.mdc  model-rule-003-model-classes-documentation.mdc  model-rule-004-organization-of-utility-functions-for-models.mdc  model-rule-005-tensor-arguments-shape-validation.mdc  model-rule-006-tensor-type-and-shape-annotations-with-jaxtyping.mdc  model-rule-007-backward-compatibility.mdc  model-rule-008-ci-tests-for-model-classes.mdc
.github/: CODEOWNERS
.github/workflows/: blossom-ci.yml  install-ci.yml
CODING_STANDARDS/: EXTERNAL_IMPORTS.md  MODELS_IMPLEMENTATION.md
docs/api/: physicsnemo.utils.rst
docs/api/models/: diffusion.rst  diffusion_preconditioners.rst
examples/additive_manufacturing/sintering_physics/: inference.py  render_rollout.py  train.py
examples/cfd/darcy_fno/: train_fno_darcy.py  validator.py
examples/cfd/darcy_nested_fnos/: evaluate_nested_darcy.py  train_nested_darcy.py  utils.py
examples/cfd/darcy_physics_informed/: darcy_physics_informed_deeponet.py  darcy_physics_informed_fno.py
examples/cfd/darcy_transolver/: requirements.txt  train_transolver_darcy.py  train_transolver_darcy_fix.py
examples/cfd/datacenter/: inference.py  train.py  train_physics_informed.py
examples/cfd/flow_reconstruction_diffusion/: fid.py  generate.py  generate_dfsr.py  misc.py  train.py  training_loop.py  training_stats.py
examples/cfd/gray_scott_rnn/: gray_scott_rnn.py
examples/cfd/lagrangian_mgn/: inference.py  requirements.txt  train.py
examples/cfd/ldc_pinns/: train.py
examples/cfd/mhd_pino/: train_mhd.py  train_mhd_vec_pot.py  train_mhd_vec_pot_tfno.py
examples/cfd/navier_stokes_dpot/: train_dpot.py
examples/cfd/navier_stokes_rnn/: navier_stokes_rnn.py
examples/cfd/stokes_mgn/: inference.py  pi_fine_tuning.py  pi_fine_tuning_gnn.py  train.py
examples/cfd/swe_nonlinear_pino/: train_swe_nl_pino.py
examples/cfd/vortex_shedding_mesh_reduced/: test.py  test_sequence.py  train.py  train_sequence.py
examples/cfd/vortex_shedding_mgn/: inference.py  train.py
examples/generative/topodiff/: inference.py  train.py  train_classifier.py  train_regressor.py
examples/geophysics/diffusion_fwi/: generate.py  train.py
examples/healthcare/bloodflow_1d_mgn/: inference.py  train.py
examples/healthcare/brain_anomaly_detection/: invert.py  train_FNO.py
examples/minimal/neighbor_list/: warp_neighbor_list.py
examples/molecular_dynamics/lennard_jones/: lennard_jones_system.py
examples/structural_mechanics/crash/: datapipe.py  inference.py  train.py  vtp_reader.py
examples/structural_mechanics/deforming_plate/: helpers.py  inference.py  train.py
examples/weather/corrdiff/: generate.py  train.py
examples/weather/diagnostic/: export_diagnostic_precip.py  train_diagnostic_precip.py
examples/weather/diffusion_sda/: data.py  etl.py  plot_hrrr.py  pyproject.toml  train.py  utils.py
examples/weather/dlwp/: train_dlwp.py
examples/weather/dlwp_healpix/: train.py  trainer.py
examples/weather/fcn_afno/: train_era5.py
examples/weather/graphcast/: train_graphcast.py
examples/weather/mixture_of_experts/: train.py  train_crps.py
examples/weather/pangu_weather/: train_pangu_era5.py  train_pangu_lite_era5.py
examples/weather/temporal_interpolation/: train.py
physicsnemo/: __init__.py
physicsnemo/active_learning/: driver.py  loop.py  protocols.py
physicsnemo/compat/: __init__.py
physicsnemo/core/: __init__.py  base.py  module.py  registry.py  version_check.py
physicsnemo/distributed/: __init__.py  manager.py
physicsnemo/domain_parallel/: __init__.py  _shard_redistribute.py  _shard_tensor_spec.py  shard_tensor.py
physicsnemo/experimental/: __init__.py
physicsnemo/models/: __init__.py  module.py
physicsnemo/nn/: __init__.py  activations.py  attention_layers.py  conv_layers.py  fused_silu.py  group_norm.py  layer_norm.py  transformer_layers.py  unet_layers.py
physicsnemo/utils/: __init__.py  capture.py  checkpoint.py  memory.py
test/: conftest.py  get_coverage.sh  pytest_utils.py
test/active_learning/: conftest.py
test/ci_tests/: prevent_untracked_imports.py
test/common/: checkpoints.py  fwdaccuracy.py  inference.py  optimization.py  utils.py
test/compat/: test_utils_imports.py
test/core/: test_filesystem.py  test_from_torch.py  test_model_factory.py  test_module_nested.py  test_version_check.py
test/datapipes/: test_ahmed_body.py  test_bsms.py  test_climate.py  test_darcy.py  test_domino_datapipe.py  test_drivaernet.py  test_healpix.py  test_healpix_couple.py  test_hydrographnet.py  test_kelvin_helmholtz.py  test_lagrangian.py  test_mesh_datapipe.py  test_stokes.py  test_synthetic.py  test_vortex_shedding.py
test/distributed/: test_autograd.py  test_config.py  test_distributed_fft.py  test_manager.py  test_mesh.py  test_utils.py
test/domain_parallel/: conftest.py  test_function_registration.py  test_grad_sharding.py  test_initialization.py  test_redistribute.py  test_reductions.py
test/metrics/: test_healpix_loss.py  test_loss_climate.py  test_metrics_cfd.py  test_metrics_climate.py  test_metrics_general.py  test_metrics_integral.py
test/models/: test_distributed_graph.py  test_dit.py  test_dlwp.py  test_entrypoints.py  test_fcn_mip_plugin.py  test_from_checkpoint.py  test_instantiate_backward_compatibility.py  test_kwargs_model.py  test_model_factory.py
test/nn/: test_graph_partition.py  test_interpolation.py  test_kan_layers.py  test_layer_norm.py  test_layers_activations.py  test_layers_dgm.py  test_layers_fourier.py  test_layers_siren.py  test_layers_spectral.py  test_layers_weightfact.py  test_layers_weightnorm.py  test_mlp_layers.py  test_nd_conv_layers.py  test_patching.py  test_sdf.py  test_zenith_angle.py  validate_utils.py
test/utils/: test_checkpoint.py  test_graph_partitioning.py  test_mesh_utils.py  test_msc_public_read.py
(+232 files in other folders)
